--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sockets_codingrainbow",
   "version": "1.0.0",
   "description": "sockets example live on youtube ",
-  "main": "sketch.js",
+  "main": "socket.js",
   "scripts": {
     "start": "node socket.js",
     "test": "echo \"Error: no test specified\" && exit 1"
